--- a/PyoriPass/.settings/org.eclipse.wst.common.component
+++ b/PyoriPass/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="context-root" value="pyoripass"/>
-        <property name="java-output-path" value="/PyoriPass/target/classes"/>
+        <property name="java-output-path" value="/PyoriPass_git/target/classes"/>
     </wb-module>
 </project-modules>
